# aws_cloud_software

./: .env  .gitattributes  .gitignore  Dockerfile  app.py  compose.debug.yml  compose.localai.yml  compose.yml  database_loader.py  docker_localai.sh  gradio_test.py  main_stack.py  pyproject.toml  readme.md  requirements.txt  session.sh  storage_stack.py  vpc_ecs_stack.py
backend/: .gitignore  Dockerfile  Dockerfile.debug  create_database.py  dev.Dockerfile  populate_database.py  pyproject.toml  requirements.txt  select_data.py
backend/app/: auth.py  config.py  main.py  make_llm_query.py  models.py  pyd_form.py  send_event.py  workflow.py  workflow_test.py
backend/app/database/: dynamo_config.py  dynamo_create.py  dynamo_get.py  dynamo_insert.py  dynamo_mock.py  models.py
backend/app/routes/: admin_routes.py  auth_routes.py
backend/app/templates/: admin_index.html  base.html  layout.html  login.html  product_create.html  product_list.html  product_update.html  signup.html  user_create.html  user_list.html  user_update.html
backend/app/templates/components/: footer.html
backend/tests/: conftest.py  user_test.py
backend/tests/templates/: index.html
data/: laptops.csv
database/: dockerfile
docs/: utn_cloud.drawio
email_lambda/: Dockerfile  config.go  go.mod  go.sum  main.go  scripts.sh
frontend/: 404.html  index.html
go/: go.mod  go.sum
go-telegram/: Dockerfile  config.go  go.mod  go.sum  main.go
go-whatsapp/: Dockerfile  config.go  go.mod  go.sum  main.go
lambda/: .env  Dockerfile  config.go  lambda_function.py  main.go  scripts.sh
(+10 files in other folders)
