[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.29",
    "fastapi>=0.115.0",
    "langchain-aws>=0.2.1",
    "langchain-ollama>=0.2.0",
    "langchain>=0.3.1",
    "langgraph>=0.2.28",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.11",
    "uvicorn>=0.31.0",
]
